--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,6 +12,7 @@
   <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
+  <section id="welcome"><h1>Welcome, {{name}}</h1></section>
   <section id="friends">
     <div id="friendsHeader"><h2>Friends</h2></div>
   </section>
